assets/style.css
@font-face {
    font-family: 'icomoon';
    src: url('fonts/icomoon.eot?c7rlk9');
    src: url('fonts/icomoon.eot?c7rlk9#iefix') format('embedded-opentype'),
        url('fonts/icomoon.ttf?c7rlk9') format('truetype'),
        url('fonts/icomoon.woff?c7rlk9') format('woff'),
        url('fonts/icomoon.svg?c7rlk9#icomoon') format('svg');
    font-weight: normal;
    font-style: normal;
    font-display: block;
}

[class^="icon-"],
[class*=" icon-"] {
    /* use !important to prevent issues with browser extensions that change fonts */
    font-family: 'icomoon' !important;
    speak: never;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;

    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.icon-next:before {
    content: "\ea24";
}

.icon-facebook:before {
    content: "\ea90";
}

.icon-whatsapp:before {
    content: "\ea93";
}

.icon-twitter:before {
    content: "\ea96";
}

.icon-linkedin2:before {
    content: "\eaca";
}

.icon-pinterest:before {
    content: "\ead1";
}

.social_icon [class^="icon-"],
[class*=" icon-"] {
    font-size: 25px;
}

.icon-facebook {
    color: #43609c;
}

.icon-twitter {
    color: #1da1f2;
}

.icon-pinterest {
    color: #C92228;
}

.icon-linkedin2 {
    color: #0077B5;
}

.icon-whatsapp {
    color: #34AF23;
}

a.css_share_icon img {
    max-width: 100%;
    width: 20px !important;
}

a.css_share_icon {
    border: 1px solid #9e9e9e;
    background: #ebebeb;
    text-align: center;
    font-size: 23px;
    height: 37px;
    width: 37px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    text-decoration: none !important;
    margin: 3px 5px;
    transition: all .2s ease-in;
}

a.css_share_icon:hover {
    background: #fff;
    box-shadow: 0px 0px 5px #00000087;
}

.css_social_items {
    display: flex;
}

.float-left-share {
    position: fixed;
    left: 0;
    top: 50%;
    transform: translate(0, -50%);
    width: 48px !important;
    z-index: 1;
}
.float-left-share:hover .nav_icon{
    background-color: #cccccc;
}
.float-left-share:hover span.icon-next {
    color: #000;
}
.float-left-share * {
    transition: all .2s ease-in-out;
}

.float-left-share .css_social_items {
    flex-direction: column;
    background: #ccc;
    border-radius: 0 5px 5px 0;
    padding: 5px 0;
}

/* Floating bar controll button*/
.nav_icon span {
    transform: rotate(180deg);
    line-height: 0;
}

.nav_icon {
    display: flex;
    justify-content: center;
    margin-bottom: 0px;
    margin-top: 6px;
    background: rgb(0 0 0 / 3%);
    padding: 8px 0;
    border-radius: 0 5px 5px 0;
    height: 24px;
    cursor: pointer;
    align-items: center;
    transition: all .2s ease-in;
}

.nav_icon:hover {
    background: #cccccc;
}

.nav_icon:hover>span.icon-next {
    color: #000;
}

span.icon-next {
    color: rgb(0 0 0 / 30%);
}

.css_social_items.hide {
    transform: translateX(-50px);
}

.nav_icon.hide {
    transform: translateX(-29px);
    justify-content: end;
    padding-right: 4px;
}

.nav_icon.hide span {
    transform: rotate(0);
}
[class^="related"]  .css_social_items,
[class*=" related"]  .css_social_items,
[id*="related"]  .css_social_items,
[id*=" related"]  .css_social_items{
    display: none !important;
}

